--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,9 +7,11 @@ edition = "2021"
 
 [dependencies]
 clap = { version = "4.5.14", features = ["derive"] }
-lightstreamer-client = "0.1.9"
+lightstreamer-client = { version = "0.1.9", git = "https://github.com/daniloaz/lightstreamer-client.git" }
 ratatui = "0.28.0"
 tokio = { version = "1.39.2", features = ["full"] } 
+tracing = "0.1.40"
+tracing-subscriber = "0.3.18"
 
 [[bin]]
 name = "isspanel"
